--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/isakura313/N_main#readme",
   "devDependencies": {
-    "imagemin-pngquant": "^6.0.1"
+    "imagemin-pngquant": "^6.0.1",
+    "vinyl-ftp": "^0.6.1"
   }
 }
