--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   },
   "homepage": "https://github.com/isakura313/N_main#readme",
   "devDependencies": {
+    "gulp": "^4.0.0",
+    "gulp-concat-css": "^3.1.0",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-notify": "^3.2.0",
+    "gulp-rename": "^1.4.0",
     "imagemin-pngquant": "^6.0.1",
     "vinyl-ftp": "^0.6.1"
   }
