--- a/package.json
+++ b/package.json
@@ -24,9 +24,15 @@
     "gulp": "^4.0.0",
     "gulp-concat-css": "^3.1.0",
     "gulp-cssnano": "^2.1.3",
+    "gulp-filesize": "0.0.6",
+    "gulp-imagemin": "^5.0.3",
     "gulp-notify": "^3.2.0",
     "gulp-rename": "^1.4.0",
+    "gulp-uglify": "^3.0.2",
     "imagemin-pngquant": "^6.0.1",
     "vinyl-ftp": "^0.6.1"
+  },
+  "dependencies": {
+    "del": "^4.0.0"
   }
 }
