--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/isakura313/N_main#readme",
   "devDependencies": {
     "gulp": "^4.0.0",
+    "gulp-cache": "^1.1.1",
     "gulp-concat-css": "^3.1.0",
     "gulp-cssnano": "^2.1.3",
     "gulp-filesize": "0.0.6",
