--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2",
+    "gulp-uglify-es": "^1.0.4",
     "imagemin-pngquant": "^6.0.1",
     "sass": "^1.19.0",
+    "uglify-es": "^3.3.9",
     "vinyl-ftp": "^0.6.1"
   },
   "dependencies": {
